--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-<<<<<<< HEAD
+/*page-structure*/
+
 * {
     margin: 0;
     padding: 0;
@@ -36,43 +37,11 @@ footer {
     background-color: black;
     min-height: 100px;
     color: white;
-=======
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
 }
 
-body {
-    font-size: 16px;
-    font-family: Arial, Helvetica, sans-serif;
-}
 
-nav {
-    background-color: ;
-    min-height: ;
-    color: white;
-}
+/*nav-style*/
 
-header {
-    background-color: white;
-    min-height: 400px;
-}
-
-.environment {
+.bg-black {
     background-color: black;
-    min-height: 300px;
-    color: white;
-}
-
-.employees {
-    background-color: white;
-    min-height: 300px;
-}
-
-footer {
-    background-color: black;
-    min-height: 100px;
-    color: white;
->>>>>>> d307e2fcb05f6cc5eae07da5c721160f3b487e5a
 }
