--- a/style.css
+++ b/style.css
@@ -7,8 +7,9 @@
 }
 
 body {
-    font-size: 16px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Sanomat Grab Web Regular', sans-serif;
+    font-size: 1.146em;
+    font-weight: 400;
 }
 
 nav {
@@ -43,5 +44,32 @@ footer {
 /*nav-style*/
 
 .bg-black {
-    background-color: black;
+    background-color: rgba(48, 24, 24, 1.0);
+}
+
+.nav-linkto {
+    color: #00cece !important;
+    font-weight: bold;
+    transition: all 0.3s;
+}
+
+.nav-linkto:hover {
+    color: #006060 !important;
+}
+
+.btn-nav {
+    color: #00cece;
+    border: 2px solid #00cece;
+    transition: all 0.3s;
+    font-weight: bold;
+}
+
+.btn-nav:hover {
+    color: white;
+    border-color: #006060;
+    background-color: #006060;
+}
+
+.search-icon {
+    border: none;
 }
