add cards to sections

--- a/style.css
+++ b/style.css
@@ -30,14 +30,17 @@ header {
 }
 
 .environment {
-    background-color: black;
     min-height: 300px;
-    color: white;
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
 }
 
 .employees {
-    background-color: white;
     min-height: 300px;
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
 }
 
 footer {
