--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/*page-structure*/
+/* page-structure */
 
 * {
     margin: 0;
@@ -42,7 +42,7 @@ header {
 }
 
 footer {
-    background-color: black;
+    background-color: #301818;
     min-height: 100px;
     color: white;
 }
@@ -115,34 +115,33 @@ footer {
 }
 
 /* footer style */
-.container {
+
+
+footer .container  {
     display: flex;
     justify-content: space-between;
     margin: auto;
-    
+    padding-top: 30px;
 }
 
-li {
+footer li {
     list-style: none;
     color: #F09048;
 }
-li:hover{
-    color: #D86000;
+
+footer li:hover{
+    color: #189090;
     cursor: pointer;
 }
 
-.footer-links {
- 
-}
-
 .list-header {
-    width: 100%;
+    width: 150px;
     color: #D86000;
     line-height: 50px;
     margin-top: 50px;
+    padding-bottom: 70px;
 }
 
-<<<<<<< HEAD
 .social-media-btn {
     justify-content: center;
     display: flex;
@@ -152,22 +151,20 @@ li:hover{
 .fa {
     margin: 0px 20px 0 0;
     padding: 15px;
-    width: 60px;
-    height: 60px;
-    font-size: 30px;
+    font-size: 50px;
     text-align: center;
     border-radius: 50%;
     color: #D86000;
-    background-color: #222326;
     text-decoration: none;
 }
 .fa:hover{
-    color: #D86000;
+    color: #189090;
     cursor: pointer;
 }
-a:hover {
+footer a:hover {
     text-decoration: none;
-=======
+}
+
 /* environment-style */
 
 .card-body-flex {
@@ -203,6 +200,5 @@ a:hover {
 }
 
 #header-button:hover {
-    background-color: black
->>>>>>> 134d7a8dedcc21a84e6046dc21188c6fdfb55215
+    background-color: black;
 }
