--- a/style.css
+++ b/style.css
@@ -221,6 +221,31 @@
         border-color: #D86000;
     }
     
-    #header-button:hover {
-        background-color: black
-    }
+#header-button:hover {
+    background-color: black
+}
+/* @media screen and (min-width: 0px) and (max-width: 700px) 
+{
+    #div-mobile {    display: block;  }
+    #div-desktop {    display: none;  }
+}
+@media screen and (min-width: 701px) and (max-width: 3000px) 
+{
+    #div-mobile {    display: none;  }
+    #div-desktop {    display: block;  }
+} */
+@media (max-width: 767.98px) {
+    #div-mobile {   display: block; }
+    #div-tablet {   display: none; }
+    #div-desktop {  display: none; }
+}
+@media (min-width: 768px) and (max-width: 991.98px) {
+    #div-mobile {   display: block; }
+    #div-tablet {   display: block; }
+    #div-desktop {  display: none; }
+}
+@media (min-width: 992px) and (max-width: 1199.98px) {
+    #div-mobile {   display: block; }
+    #div-tablet {   display: block; }
+    #div-desktop {  display: block; }
+}
