edit nav and header. took out styles under employee; please fix.

--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ footer {
 
 .search-icon {
     border: none;
+    font-size: 1.20rem;
 }
 
 .res-invisible-1 {
@@ -94,6 +95,12 @@ footer {
 nav ul {
     display: flex;
     align-items: center;
+}
+
+.nav-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 /* header style */
@@ -111,7 +118,17 @@ nav ul {
     padding: 20px 0px;
     margin: 0px auto;
     width: 60rem;
-    height: 18rem;
+}
+
+header .container {
+    display: flex;
+    justify-content: center;
+}
+
+@media screen and (max-width: 767px) {
+    .header-subtitle {
+        max-width: 300px;
+    }
 }
 
 .header-title {
@@ -120,7 +137,7 @@ nav ul {
     padding-bottom: 10px;
     color: #F09048;
     text-align: center;
-
+    line-height: 1em;
 }
 
 .header-subtitle {
@@ -137,7 +154,7 @@ nav ul {
     font-family: 'Sanomat Grab Web Regular', sans-serif;
     font-size: 1.146em;
     font-weight: 400;
-    color: ##F09048;
+    color: #F09048;
     border-color: #F09048;
 }
 
@@ -222,16 +239,4 @@ footer a:hover {
 .avatar {
     border-radius: 50%;
     width: 200px;
-}
-
-#header-button {
-    font-family: 'Sanomat Grab Web Regular', sans-serif;
-    font-size: 1.146em;
-    font-weight: 400;
-    color: #D86000;
-    border-color: #D86000;
-}
-
-#header-button:hover {
-    background-color: black;
 }
