--- a/style.css
+++ b/style.css
@@ -24,7 +24,6 @@ header {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    height: 650px;
 }
 
 .environment-section {
@@ -137,6 +136,20 @@ nav ul {
     background-color: rgba(48, 24, 24, .9);
     padding: 20px 0px;
     margin: 0px auto;
+    width: 60rem;
+}
+
+.aboutus-header-style {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    color: #F09048;
+    border: 2px solid rgba(48, 24, 24, .9);
+    background-color: rgba(48, 24, 24, .9);
+    padding: 20px 0px;
+    margin: 100px auto 30px auto;
     width: 60rem;
 }
 
@@ -294,6 +307,13 @@ a:hover {
     background-color: aquamarine;
 }
 
+.employee-name-aboutus {
+    font-size: 2em;
+    font-weight: 600;
+    background-color: rgb(0, 248, 236);
+    ;
+}
+
 .no-border {
     border: none;
 }
@@ -303,6 +323,13 @@ a:hover {
     width: 200px;
     height: 200px;
     border: 8px solid #D86000;
+}
+
+.avatar-aboutus {
+    border-radius: 10%;
+    width: 75%;
+    height: auto;
+    border: 8px solid rgb(0, 248, 236);
 }
 
 #header-button {
@@ -384,9 +411,8 @@ s
     border: none;
 }
 
-.avatar {
-    border-radius: 50%;
-    width: 200px;
+.aboutus-card {
+    min-width: 50%;
 }
 
 
