change the background of about-us page and fix bug in header (index)

--- a/style.css
+++ b/style.css
@@ -18,8 +18,16 @@ nav {
 
 header {
     background-color: white;
-    min-height: 400px;
+    min-height: 600px;
     background-image: url("img/platypus-hero2.jpg");
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.header-aboutus {
+    background-image: url("img/about-us-bg.png");
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: center;
@@ -146,8 +154,8 @@ nav ul {
     align-items: center;
     position: relative;
     color: #F09048;
-    border: 2px solid rgba(48, 24, 24, .9);
-    background-color: rgba(48, 24, 24, .9);
+    border: 2px solid rgba(48, 24, 24, .8);
+    background-color: rgba(48, 24, 24, .8);
     padding: 20px 0px;
     margin: 100px auto 30px auto;
     width: 60rem;
