--- a/style.css
+++ b/style.css
@@ -373,9 +373,13 @@ a:hover {
         flex: 100%;
         max-width: 100%;
     }
-    .equation-icon{
+    #animal-icon{
         width: 75px;
         height: 75px;
+    }
+    #equation-icon{
+        width: 50px;
+        height: 50px;
     }
 }
 
@@ -387,9 +391,13 @@ a:hover {
         flex: 50%;
         max-width: 100%;
     }
-    .equation-icon{
+    #animal-icon{
         width: 125px;
         height: 125px;
+    }
+    #equation-icon{
+        width: 90px;
+        height: 90px;
     }
 }
 
@@ -401,17 +409,31 @@ a:hover {
         flex: 100%;
         max-width: 33.33%;
     }
-    .equation-icon{
+    #animal-icon{
         width: 200px;
         height: 200px;
+    }
+    #equation-icon{
+        width: 150px;
+        height: 150px;
     }
 }
 
 @media (max-width: 576px) {
-    .equation-icon{
+    #animal-icon{
         width: 75px;
         height: 75px;
     }
+    #equation-icon{
+        width: 50px;
+        height: 50px;
+    }
+}
+.m-3{
+    margin: 0rem!important;
+}
+.m-3{
+    margin: 3px!important;
 }
 
 /* footer style */
