responsive for the cards and about-us in 'index.html'

--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ header {
     min-height: 300px;
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
     text-align: center;
     position: relative;
     overflow: hidden;
@@ -56,6 +57,7 @@ header {
     display: flex;
     justify-content: space-around;
     text-align: center;
+    flex-wrap: wrap;
 }
 
 footer {
@@ -255,6 +257,7 @@ a:hover {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    background-color: rgba(0, 0, 0, .7);
 }
 
 .environment-text {
@@ -263,7 +266,7 @@ a:hover {
 }
 
 .environment-card {
-    background-color: rgba(0, 0, 0, .7);
+    background-color: rgba(0, 0, 0, 0);
     border: none;
     z-index: 2;
 }
@@ -328,8 +331,8 @@ a:hover {
 
 .avatar {
     border-radius: 50%;
-    width: 200px;
-    height: 200px;
+    width: 75%;
+    height: auto;
     border: 8px solid #D86000;
 }
 
@@ -420,6 +423,10 @@ s
 }
 
 .aboutus-card {
+    min-width: 25%;
+}
+
+.aboutus-page-card {
     min-width: 50%;
 }
 
